--- a/deathworld-harrison.adoc
+++ b/deathworld-harrison.adoc
@@ -4,7 +4,7 @@ sprawled:: <<pagina, p.>> 2. s-a tolănit.
 sprawl::: [sprɔ:l] https://en.wiktionary.org/wiki/sprawl[through a Proto-Germanic form cognate with *spreutaną (“to sprout”)].
 sproute:::: [spraut] <<intranz, _vi_.>> a țâșni.
 
-stein:: 2 pahar special de bere; https://en.wiktionary.org/wiki/stein[A beer mug, usually made of ceramic or glass.]
+stein:: [staɪn] p. 2. pahar special de bere. https://en.wiktionary.org/wiki/stein[A beer mug, usually made of ceramic or glass].
 
 limply:: 2 alene, domol, fără vlagă
 
