--- a/deathworld-harrison.adoc
+++ b/deathworld-harrison.adoc
@@ -86,7 +86,7 @@ pace:: https://en.wiktionary.org/wiki/pace#Verb[To walk back and forth in a smal
 
 jabbed:: 4 împins, înghiontit, vârât
 
-ore:: 5 minereu
+ore:: [ɔ:] p. 5. minereu.
 
 worn:: [wɔ:n] <<pagina, p.>> 5. _adj._ obosit; uzat. _vt._, _vi._ _part._ _trec._ _de la_ wear.
 wear::: [wɛə] https://en.wiktionary.org/wiki/wear[Cognate to  Latin vestis (“garment”)]
